--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${db_username}
     password: ${db_password}
-    url: jdbc:mysql://localhost:3306/ticket_auction
+    url: jdbc:mysql://localhost:3306/auctionseats
   jpa:
     hibernate:
       ddl-auto: none
