#129 [init - payment] 토스 API 를 이용하여 결제 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,10 @@ cloud: # S3
       static: ap-northeast-2
     stack:
       auto: false
+
+payment:
+  toss:
+    client-key: ${TOSS_CLIENT_KEY}
+    secret-key: ${TOSS_SECRET_KEY}
+    success-url: ${SUCCESS_URL}
+    fail-url: ${FAIL_URL}
