--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
     username: ${db_username}
     password: ${db_password}
     url: jdbc:mysql://localhost:3306/auctionseats
+  sql:
+     init:
+       mode: always
   jpa:
     hibernate:
       ddl-auto: update
@@ -24,6 +27,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+    defer-datasource-initialization: true
   jackson:
     serialization:
       fail-on-empty-beans: false
