#192 [cicd] test 코드 수정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 server:
+  port: 8080
   host:
-    front: "http://localhost:3000"  # 예시로 기본 URL을 설정
-
+    front: localhost8080
 spring:
   config:
     activate:
