--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,10 @@
 server:
   port: 80
+
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: prod  # 'prod' 프로파일이 활성화될 때 이 설정이 사용됩니다.
   data:
     redis:
       host: localhost
