--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,6 +9,8 @@ spring:
       on-profile: prod  # 'prod' 프로파일이 활성화될 때 이 설정이 사용됩니다.
   data:
     redis:
+      host: localhost
+      port: 6379
       cluster:
         nodes:
           - localhost:6379
