--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${db_username}
     password: ${db_password}
-    url: jdbc:mysql://localhost:3306/auction_seats
+    url: jdbc:mysql://localhost:3306/auctionseats
 
     hikari:
       connection-timeout: 3000
