--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,13 +9,11 @@ spring:
       on-profile: prod  # 'prod' 프로파일이 활성화될 때 이 설정이 사용됩니다.
   data:
     redis:
-      host: localhost
-      port: 6379
       cluster:
         nodes:
+          - localhost:6379
           - localhost:6380
           - localhost:6381
-          - localhost:6382
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${db_username}
@@ -47,3 +45,10 @@ cloud: # S3
       static: ap-northeast-2
     stack:
       auto: false
+
+payment:
+  toss:
+    client-key: ${TOSS_CLIENT_KEY}
+    secret-key: ${TOSS_SECRET_KEY}
+    success-url: ${SUCCESS_URL}
+    fail-url: ${FAIL_URL}
