--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -6,21 +6,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     permissions: write-all
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      db_password: ${{ secrets.db_password }}
-      db_username: ${{ secrets.db_username }}
-      FAIL_URL: ${{ secrets.FAIL_URL }}
-      jwt_secret_key: ${{ secrets.jwt_secret_key }}
-      s3_bucket_name: ${{ secrets.s3_bucket_name }}
-      SUCCESS_URL: ${{ secrets.SUCCESS_URL }}
-      TOSS_CLIENT_KEY: ${{ secrets.TOSS_CLIENT_KEY }}
-      TOSS_SECRET_KEY: ${{ secrets.TOSS_SECRET_KEY }}
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -39,6 +26,20 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      # 환경 변수 출력 단계 추가
+      - name: Print Environment Variables
+        run: |
+          echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          echo "DB_USERNAME: ${{ secrets.db_username }}"
+          echo "DB_PASSWORD: ${{ secrets.db_password }}"
+          echo "FAIL_URL: ${{ secrets.FAIL_URL }}"
+          echo "JWT_SECRET_KEY: ${{ secrets.jwt_secret_key }}"
+          echo "S3_BUCKET_NAME: ${{ secrets.s3_bucket_name }}"
+          echo "SUCCESS_URL: ${{ secrets.SUCCESS_URL }}"
+          echo "TOSS_CLIENT_KEY: ${{ secrets.TOSS_CLIENT_KEY }}"
+          echo "TOSS_SECRET_KEY: ${{ secrets.TOSS_SECRET_KEY }}"
 
       - name: Test with Gradle
         run: ./gradlew --info test
