--- a/appspec.yml
+++ b/appspec.yml
@@ -1,11 +1,9 @@
 version: 0.0
 os: linux
-
 files:
   - source: /
-    destination: /home/ubuntu/auction-seats
+    destination: /home/ubuntu/tago
     overwrite: yes
-file_exists_behavior: OVERWRITE
 
 permissions:
   - object: /
@@ -16,6 +14,7 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
-      timeout: 200
-      runas : root
+    - location: scripts/afterInstall.sh
+      timeout: 60
+      runas: ubuntu
+
