--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,6 @@ env:
   CODE_DEPLOY_APP_NAME: tago-dev
   DEPLOYMENT_GROUP_NAME: tago-deploy-group
 
-
 jobs:
   build-docker:
     runs-on: ubuntu-latest
@@ -60,30 +59,34 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           mkdir scripts
           touch scripts/deploy.sh
-          echo -e '#!/bin/bash
-            echo "> 현재 실행 중인 Docker 컨테이너 pid 확인" >> /home/ubuntu/deploy.log
-            CONTAINER_ID=$(sudo docker container ls -af "name=auction-seats-api" -q)
-            if [ -z "$CONTAINER_ID" ]; 
-            then
-              echo "> 현재 구동중인 Docker 컨테이너가 없으므로 종료하지 않습니다." >> /home/ubuntu/deploy.log
-            else
-              echo "> sudo docker stop $CONTAINER_ID"   # 현재 구동중인 Docker 컨테이너가 있다면 모두 중지
-              sudo docker stop -f $CONTAINER_ID
-          
-              echo "> sudo docker rm $CONTAINER_ID"   # 정지한 컨테이너 삭제
-              sudo docker rm -f $CONTAINER_ID
+          echo -e '#!/bin/bash\n' > scripts/deploy.sh
+          echo "echo '> 현재 실행 중인 Docker 컨테이너 pid 확인' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
+          echo "CONTAINER_ID=\$(sudo docker container ls -af 'name=auction-seats-api' -q)" >> scripts/deploy.sh
+          echo "if [ -z \"\$CONTAINER_ID\" ]; then" >> scripts/deploy.sh
+          echo "  echo '> 현재 구동중인 Docker 컨테이너가 없으므로 종료하지 않습니다.' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
+          echo "else" >> scripts/deploy.sh
+          echo "  echo '> sudo docker stop \$CONTAINER_ID'   # 현재 구동중인 Docker 컨테이너가 있다면 모두 중지" >> scripts/deploy.sh
+          echo "  sudo docker stop -f \$CONTAINER_ID" >> scripts/deploy.sh
+          echo "  echo '> sudo docker rm \$CONTAINER_ID'   # 정지한 컨테이너 삭제" >> scripts/deploy.sh
+          echo "  sudo docker rm -f \$CONTAINER_ID" >> scripts/deploy.sh
+          echo "  sleep 5" >> scripts/deploy.sh
+          echo "fi" >> scripts/deploy.sh
+          echo "aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin \$ECR_REGISTRY" >> scripts/deploy.sh
+          echo "docker pull \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
+          echo "if sudo lsof -i :6379; then" >> scripts/deploy.sh
+          echo "  echo '포트 6379가 사용 중입니다. 다른 포트를 사용합니다.' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
+          echo "  docker run -p 8080:8080 -p 6380:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
+          echo "else" >> scripts/deploy.sh
+          echo "  docker run -p 8080:8080 -p 6379:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
+          echo "fi" >> scripts/deploy.sh
 
-              sleep 5
-            fi \n' >> scripts/deploy.sh  
-          echo "aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY" >> scripts/deploy.sh
-          echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
-          echo "docker run -p 8080:8080 -p 6379:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
       - name: upload to s3
         env:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           zip -r $IMAGE_TAG.zip ./scripts appspec.yml
           aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
       - name: start deploy
         env:
           IMAGE_TAG: ${{ github.sha }}
