--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,13 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: make application-prod.yml
+      - name: Make application-prod.yml
         if: contains(github.ref, 'main')
         run: |
           cd ./src/main/resources
@@ -38,7 +39,7 @@ jobs:
         run: ./gradlew clean build -x test --stacktrace
         shell: bash
 
-      - name: aws configure
+      - name: AWS Configure
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_KEY }}
@@ -49,7 +50,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: build docker file and setting deploy files
+      - name: Build Docker image and set deploy files
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: auction-seats
@@ -57,8 +58,11 @@ jobs:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
           DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
         run: |
+          # Docker 이미지 빌드 및 푸시
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+          # 배포 스크립트 생성
           mkdir scripts
           touch scripts/deploy.sh
           echo -e '#!/bin/bash\n' > scripts/deploy.sh
@@ -81,15 +85,22 @@ jobs:
           echo "else" >> scripts/deploy.sh
           echo "  docker run -p 8080:8080 -p 6379:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
           echo "fi" >> scripts/deploy.sh
+          
+          # 배포 스크립트 실행 권한 부여
+          chmod +x scripts/deploy.sh
 
-      - name: upload to s3
+      - name: Upload to S3
         env:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           zip -r $IMAGE_TAG.zip ./scripts appspec.yml
-          aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+          aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$IMAGE_TAG.zip
 
-      - name: start deploy
+      - name: Start deploy
         env:
           IMAGE_TAG: ${{ github.sha }}
-        run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-group-name $DEPLOYMENT_GROUP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
+        run: |
+          aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME \
+          --deployment-group-name $DEPLOYMENT_GROUP_NAME \
+          --deployment-config-name CodeDeployDefault.OneAtATime \
+          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
