--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,14 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Make application-prod.yml
+      - name: make application-prod.yml
         if: contains(github.ref, 'main')
         run: |
           cd ./src/main/resources
@@ -39,7 +38,7 @@ jobs:
         run: ./gradlew clean build -x test --stacktrace
         shell: bash
 
-      - name: AWS Configure
+      - name: aws configure
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_KEY }}
@@ -50,57 +49,41 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build Docker image and set deploy files
+      - name: build docker file and setting deploy files
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: auction-seats
           IMAGE_TAG: ${{ github.sha }}
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
         run: |
-          # Docker 이미지 빌드 및 푸시
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-          # 배포 스크립트 생성
           mkdir scripts
           touch scripts/deploy.sh
-          echo -e '#!/bin/bash\n' > scripts/deploy.sh
-          echo "echo '> 현재 실행 중인 Docker 컨테이너 pid 확인' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
-          echo "CONTAINER_ID=\$(sudo docker container ls -af 'name=auction-seats-api' -q)" >> scripts/deploy.sh
-          echo "if [ -z \"\$CONTAINER_ID\" ]; then" >> scripts/deploy.sh
-          echo "  echo '> 현재 구동중인 Docker 컨테이너가 없으므로 종료하지 않습니다.' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
-          echo "else" >> scripts/deploy.sh
-          echo "  echo '> sudo docker stop \$CONTAINER_ID'   # 현재 구동중인 Docker 컨테이너가 있다면 모두 중지" >> scripts/deploy.sh
-          echo "  sudo docker stop -f \$CONTAINER_ID" >> scripts/deploy.sh
-          echo "  echo '> sudo docker rm \$CONTAINER_ID'   # 정지한 컨테이너 삭제" >> scripts/deploy.sh
-          echo "  sudo docker rm -f \$CONTAINER_ID" >> scripts/deploy.sh
-          echo "  sleep 5" >> scripts/deploy.sh
-          echo "fi" >> scripts/deploy.sh
-          echo "echo \"\$DOCKER_HUB_PASSWORD\" | docker login --username \"\$DOCKER_HUB_USERNAME\" --password-stdin" >> scripts/deploy.sh
-          echo "docker pull \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
-          echo "if sudo lsof -i :6379; then" >> scripts/deploy.sh
-          echo "  echo '포트 6379가 사용 중입니다. 다른 포트를 사용합니다.' >> /home/ubuntu/deploy.log" >> scripts/deploy.sh
-          echo "  docker run -p 8080:8080 -p 6380:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
-          echo "else" >> scripts/deploy.sh
-          echo "  docker run -p 8080:8080 -p 6379:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG" >> scripts/deploy.sh
-          echo "fi" >> scripts/deploy.sh
+          echo -e '#!/bin/bash
+            echo "> 현재 실행 중인 Docker 컨테이너 pid 확인" >> /home/ubuntu/deploy.log
+            CONTAINER_ID=$(sudo docker container ls -af "name=auction-seats-api" -q)
+            if [ -z "$CONTAINER_ID" ]; 
+            then
+              echo "> 현재 구동중인 Docker 컨테이너가 없으므로 종료하지 않습니다." >> /home/ubuntu/deploy.log
+            else
+              echo "> sudo docker stop $CONTAINER_ID"   # 현재 구동중인 Docker 컨테이너가 있다면 모두 중지
+              sudo docker stop -f $CONTAINER_ID
           
-          # 배포 스크립트 실행 권한 부여
-          chmod +x scripts/deploy.sh
+              echo "> sudo docker rm $CONTAINER_ID"   # 정지한 컨테이너 삭제
+              sudo docker rm -f $CONTAINER_ID
 
-      - name: Upload to S3
+              sleep 5
+            fi \n' >> scripts/deploy.sh  
+          echo "aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY" >> scripts/deploy.sh
+          echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
+          echo "docker run -p 8080:8080 -p 6379:6379 -p 3306:3306 -v /home/ubuntu/auction-seats/logs:/logs -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul -d --restart always --name auction-seats-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
+      - name: upload to s3
         env:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           zip -r $IMAGE_TAG.zip ./scripts appspec.yml
-          aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$IMAGE_TAG.zip
-
-      - name: Start deploy
+          aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+      - name: start deploy
         env:
           IMAGE_TAG: ${{ github.sha }}
-        run: |
-          aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME \
-          --deployment-group-name $DEPLOYMENT_GROUP_NAME \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
+        run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-group-name $DEPLOYMENT_GROUP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
