--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,14 @@ jobs:
         if: contains(github.ref, 'main')
         run: |
           cd ./src/main/resources || exit 1
+          
+          # 파일 존재 여부 확인
+          if [ -f ./application-prod.yml ]; then
+              echo "application-prod.yml already exists. Deleting it."
+              rm ./application-prod.yml
+          fi
+          
+          # 새 파일 생성 및 내용 작성
           touch ./application-prod.yml
           echo "${{ secrets.YML_PROD }}" | base64 --decode > ./application-prod.yml || { echo "Failed to create application-prod.yml"; exit 1; }
         shell: bash
