#192 [cicd] cicd 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -89,24 +89,25 @@ jobs:
           echo "aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY" >> scripts/deploy.sh
           echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
           echo "docker run -d --network host --name auction-seats-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
+          echo -e 'echo "Performing health check on the application..." >> /home/ubuntu/deploy.log\n\
+            sleep 10  # Wait for the application to start\n\
+            HTTP_RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://www.auction-seats.com/health)  # 헬스 체크 엔드포인트\n\
+            if [ "$HTTP_RESPONSE" -ne 200 ]; then\n\
+                echo "Health check failed with response code $HTTP_RESPONSE." >> /home/ubuntu/deploy.log\n\
+                exit 1\n\
+            else\n\
+                echo "Health check succeeded with response code $HTTP_RESPONSE." >> /home/ubuntu/deploy.log\n\
+            fi' >> scripts/deploy.sh
+
       - name: upload to s3
         env:
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          zip -r $IMAGE_TAG.zip ./scripts appspec.yml
+          zip -r $IMAGE_TAG.zip ./scripts
           aws s3 cp --region ap-northeast-2 --acl private ./$IMAGE_TAG.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
       - name: start deploy
         env:
           IMAGE_TAG: ${{ github.sha }}
-        run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-group-name $DEPLOYMENT_GROUP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
-      - name: Health Check
         run: |
-          echo "Performing health check on the application..."
-          sleep 10  # Wait for the application to start
-          HTTP_RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://www.auction-seats.com/health)  # 헬스 체크 엔드포인트
-          if [ "$HTTP_RESPONSE" -ne 200 ]; then
-              echo "Health check failed with response code $HTTP_RESPONSE."
-              exit 1
-          else
-              echo "Health check succeeded with response code $HTTP_RESPONSE."
-          fi
+          aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-group-name $DEPLOYMENT_GROUP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$IMAGE_TAG.zip
